# Cascade

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  index.html  pyproject.toml
.github/workflows/: ci.yml
cascade/: __init__.py  api.py  cli.py  config.py
cascade/budget/: __init__.py  ledger.py  tracker.py
cascade/core/: agent.py  approval.py  auditor.py  escalation.py  events.py  executor.py  orchestrator.py  runtime.py  task.py  worker.py
cascade/observability/: __init__.py  journal.py  rollback.py  tracing.py
cascade/plugins/: __init__.py  base.py  registry.py
cascade/providers/: __init__.py  anthropic_provider.py  azure_provider.py  base.py  benchmark.py  google_provider.py  ollama_provider.py  openai_provider.py  router.py
cascade/strategy/: __init__.py  base.py  default.py
cascade/tools/: __init__.py  base.py  code_search.py  diff_preview.py  file_ops.py  git_ops.py  semantic.py  shell.py  web.py
cascade/tui/: __init__.py  agent_bridge.py  app.py  slash_commands.py
cascade/tui/screens/: __init__.py  chat.py  doctor.py  init_wizard.py
cascade/tui/themes/: __init__.py  cascade.tcss  catppuccin_mocha.tcss  dracula.tcss  gruvbox.tcss  nord.tcss  one_dark.tcss  tokyo_night.tcss
cascade/tui/widgets/: __init__.py  approval_prompt.py  doctor_check.py  header.py  input_bar.py  message_list.py  thinking_block.py  tool_block.py
cascade/utils/: display.py  logger.py
docs/: Building-Custom-Tools.md  Configuration-Reference.md  Cost-Management.md  Getting-Started.md  Running-in-CI.md  Tool-Reference.md
tests/: test_agent_runtime.py  test_approval.py  test_budget_and_provider_modules.py  test_cli_commands.py  test_config.py  test_escalation.py  test_git_tools.py  test_observability_modules.py  test_plugin_and_tooling_modules.py  test_runtime_foundation.py  test_shell_tools.py  test_tools.py
tests/harness/: test_sandbox_workflow.py
